@@ -1,3 +1,7 @@
+Sun Mar  9 18:46:15 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/aoffile.h (HOW2_*): Update comments.
+
 Sun Mar  9 18:33:20 CET 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* src/lit.c (DEBUG_LIT): Fix build.
